# bit-tunnel

./: .gitignore  Cargo.toml  LICENSE  README.md
client/: Cargo.toml
client/src/: client.rs  config.rs  lib.rs  socks5.rs  tunnel.rs
common/: Cargo.toml
common/src/: lib.rs  protocol.rs
script/: build_macos.sh  build_windows.sh  linux_build.sh  macos_build.sh
server/: Cargo.toml
server/src/: config.rs  lib.rs  tunnel.rs
src/: client.rs  lib.rs
