[package]
name = "common"
version = "0.1.0"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8.0",  features = ["unstable"] }
futures-timer = "1.0.2"
log = { version = "0.4.8", features = ["std"] }
time = "0.1.42"
rust-crypto = "0.2.36"
rand = "0.7.2"