[package]
name = "server"
version = "0.1.0"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path="../common"}
async-std = { version = "~1.2.0", features = ["unstable"] }
time = "0.1.42"
getopts = "0.2.21"
log = { version = "0.4.8", features = ["std"] }